# Ubuntu22_Startup_App

./: CMakeLists.txt  README.md  camera.sh  orbslam.sh  recored.sh
include/: DesktopEntryWriter.h  MainWindow.h
src/: DesktopEntryWriter.cpp  MainWindow.cpp
